infra/envs/prod/app/helm-values/karpenter-service-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: karpenter
  namespace: kube-system
spec:
  ports:
    - port: 8443
      targetPort: 8443
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: karpenter
  namespace: kube-system
subsets:
  - addresses:
      - ip: 10.0.32.68
      - ip: 10.0.17.127
    ports:
      - port: 8443
