infra/envs/prod/app/helm-values/karpenter-service-fix.yaml
apiVersion: v1
kind: Service
metadata:
  name: karpenter
  namespace: karpenter
spec:
  ports:
    - name: http-metrics
      port: 8080
      targetPort: http-metrics
    - name: https-webhook
      port: 8443
      targetPort: https-webhook
  selector:
    # 파드의 라벨과 일치해야 합니다.
    app.kubernetes.io/instance: karpenter
    app.kubernetes.io/name: karpenter
