infra/envs/prod/app/helm-values/service-scg.yaml
# helm-values/service-scg.yaml
apiVersion: v1
kind: Service
metadata:
  name: t6-on-race-scg-service
  namespace: t6-on-race-prod

annotations:
    # 프로메테우스가 이 서비스를 자동으로 찾아 메트릭을 수집하도록 설정
    prometheus.io/scrape: "true"
    prometheus.io/path: "/actuator/prometheus"
    prometheus.io/port: "8080"

spec:
  selector:
    app: t6-on-race-scg # SCG 파드의 레이블과 일치해야 함
  ports:
    - name: http   # [추가 필수] ServiceMonitor 매핑용
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP # ALB가 직접 파드 IP로 쏘기 때문에 ClusterIP면 충분합니다.
